[build-system]
requires = ["setuptools>=75.3.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "C41811.Config"
description = "A useful config module."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "C418____11", email = "553515788@qq.com" }
]
license = { file = "LICENSE" }
keywords = ["config", "yaml", "toml", "json"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic~=2.10.0b1",
]

[project.urls]
"Bug Tracker" = "https://github.com/C418-11/C41811_Config/issues"
"Source Code" = "https://github.com/C418-11/C41811_Config"
"Documentation" = "https://C41811Config.readthedocs.io"

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-autoapi",
    "furo",
]
dev = [
    "PyYAML",
    "ruamel.yaml",
    "toml",
]
PyYamlSL = ["PyYAML"]
RuamelYamlSL = ["ruamel.yaml"]
TomlSL = ["toml"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/C41811/Config/_version.py"
